--- a/document.tex
+++ b/document.tex
@@ -78,9 +78,9 @@
 \defineAuthor{surname5}{Lerit}
 \defineAuthor{firstname5}{Jose Mari Luis L.}
 
-\newcommand{\documentTitle}{DI PA NAMIN ALAM TITLE} % put tilde (~) between words to indicate non-breaking adjacent words
+\newcommand{\documentTitle}{Microcontroller Based Vehicle Anti Collision Monitoring System} % put tilde (~) between words to indicate non-breaking adjacent words
 
-\newcommand{\keywords}{EWAN, KO}
+\newcommand{\keywords}{Microcontrollers, Automobile}
 
 \newcommand{\approvalDate}{April~27,~\the\year} % put here the date when all examiners and/or their approved representative have given their approval; do not remove the tildes in order to not break the date; the submission deadline can also be placed as the date
 
